<!-- /**
 * Autori : Merola Sabrina, Pafundi Vincenzo, Russo Debora, Tecchia Elisabetta
 * Esame : Programmazione I
 * Facoltà : Ingegneria Informatica Federico II Napoli
 * Data : 21/05/2015
 * Nome File: CITYPOCKET/activiti_turista.xml
 * Versione : 1.0
 */-->




<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/turista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ds.example.prova.TuristaActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        
        android:gravity="center"
        android:text="@string/turista"
        android:textColor="@color/nero"
        android:textSize="50sp" />

    <Button
        android:id="@+id/si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/stilebottone"
        android:text="@string/si"
        android:onClick="si"
        android:textColor="@color/nero" />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/si"
        android:layout_alignBottom="@+id/si"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginRight="14dp"
        android:background="@drawable/stilebottone"
        android:onClick="no"
        android:text="@string/no"
        android:textColor="@color/nero" />

</RelativeLayout>